--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-{
-  "本地测试": "http://localhost:8620",
-  "雨云": "http://r.s.mpsmc.cn:8620"
-}
+[
+    {
+        "name":"本地测试",
+        "httpUrl":"http://localhost:8620",
+        "webSocketUrl":"ws://localhost:8620"
+    },
+    {
+        "name":"雨云",
+        "httpUrl":"http://r.s.mpsmc.cn:8620",
+        "webSocketUrl":"ws://r.s.mpsmc.cn:8620"
+    }
+]
