--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         "name":"本地测试",
         "httpUrl":"http://localhost:8620",
         "webSocketUrl":"ws://localhost:8620"
-    }
+    },
+    {
+        "id":3,
+        "name":"远程测试",
+        "httpUrl":"http://r.s.mpsmc.cn:8628",
+        "webSocketUrl":"ws://r.s.mpsmc.cn:8628"
+    },
 
 ]
