--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -5,7 +5,7 @@
     <title>致谢</title>
 </head>
 <body>
-<h1>TsTe - 致谢名单</h1>
+<h1>Helix - 致谢名单</h1>
 <p>
     感谢沂水县第一中学2021级37班、38班以下老师对TsTe测试的大力支持：
     <br>
@@ -16,10 +16,10 @@
     陈兆兴老师
 </p>
 <p>
-    感谢王国华同学对TsTe的测试和logo制作
+    感谢王国华同学对Helix的测试和logo制作
 </p>
 <p>
-    感谢同玄方（上海）电子商务有限公司为TsTe提供的服务和技术支持
+    感谢同玄方（上海）电子商务有限公司为TsTe提供的服务与支持
 </p>
 <p>
     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=526468311&auto=0&height=32"></iframe>
@@ -28,7 +28,7 @@
     Presented By Weng Wenqi.
 </p>
 <p>
-   @Present MPSMC. All Rights Reserved.
+   @2023 MPSMC. All Rights Reserved.
 </p>
 </body>
 </html>
