--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     {
         "id":3,
         "name":"远程测试",
-        "httpUrl":"http://r.s.mpsmc.cn:8628",
-        "webSocketUrl":"ws://r.s.mpsmc.cn:8628"
+        "httpUrl":"http://192.158.137.1：8620",
+        "webSocketUrl":"ws://192.158.137.1：8620"
     }
 
 ]
