--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -7,22 +7,24 @@
 <body>
 <h1>Helix - 致谢名单</h1>
 <p>
-    感谢沂水县第一中学2021级37班、38班以下老师对TsTe测试的大力支持：
+    感谢沂水县第一中学2021级37班、38班以下老师对Helix的宝贵建议和大力支持：
     <br>
     刘立国老师
     <br>
     江培培老师
     <br>
     陈兆兴老师
+    <br>
+    刘瑞香老师
 </p>
 <p>
     感谢王国华同学对Helix的测试和logo制作
 </p>
 <p>
-    感谢同玄方（上海）电子商务有限公司为TsTe提供的服务与支持
+    感谢同玄方（上海）电子商务有限公司为Helix提供的服务与支持
 </p>
 <p>
-    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=526468311&auto=0&height=32"></iframe>
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=562010&auto=0&height=32"></iframe>
 </p>
 <p>
     Presented By Weng Wenqi.
