--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
     {
         "id":1,
-        "name":"雨云",
+        "name":"Helix SaaS",
         "httpUrl":"http://r.s.mpsmc.cn:8620",
         "webSocketUrl":"ws://r.s.mpsmc.cn:8620"
     },
