--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     {
         "id":1,
         "name":"Helix SaaS",
-        "httpUrl":"http://r.s.mpsmc.cn:8620",
-        "webSocketUrl":"ws://r.s.mpsmc.cn:8620"
+        "httpUrl":"http://api.helixside.cn:8620",
+        "webSocketUrl":"ws://api.helixside.cn:8620"
     },
     {
         "id":2,
