--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         "name":"远程测试",
         "httpUrl":"http://192.168.2.120:8620",
         "webSocketUrl":"ws://192.168.2.120:8620"
+    },
+    {
+        "id":4,
+        "name":"物语云",
+        "httpUrl":"http://a.mcstory.cc:8620",
+        "webSocketUrl":"ws://a.mcstory.cc:8620"
     }
-
 ]
