--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     {
         "id":4,
         "name":"物语云",
+        "httpUrl":"http://api.helixside.cn:8620",
+        "webSocketUrl":"ws://api.helixside.cn:8620"
+    },
+    {
+        "id":5,
+        "name":"物语云",
         "httpUrl":"http://a.mcstory.cc:8620",
         "webSocketUrl":"ws://a.mcstory.cc:8620"
     }
