--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     },
     {
         "id":4,
-        "name":"物语云",
+        "name":"SaaS 2",
         "httpUrl":"http://api.helixside.cn:8620",
         "webSocketUrl":"ws://api.helixside.cn:8620"
     },
