--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     {
         "id":1,
         "name":"Helix SaaS",
-        "httpUrl":"http://api.helixside.cn:8620",
-        "webSocketUrl":"ws://api.helixside.cn:8620"
+        "httpUrl":"http://103.40.13.68:8620",
+        "webSocketUrl":"ws://103.40.13.68:8620"
     },
     {
         "id":2,
@@ -20,8 +20,8 @@
     {
         "id":4,
         "name":"SaaS 2",
-        "httpUrl":"http://api.helixside.cn:8620",
-        "webSocketUrl":"ws://api.helixside.cn:8620"
+        "httpUrl":"http://103.40.13.68:8620",
+        "webSocketUrl":"ws://103.40.13.68:8620"
     },
     {
         "id":5,
